# JobTracker

./: .env.example  Dockerfile  Dockerfile.mcp  README.md  TECHNICAL_DOCUMENTATION.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  main.py  models.py
api/routers/: __init__.py  occupations.py  skills.py  wages.py
config/: settings.yaml
mcp_server/: __init__.py  server.py
scripts/: __init__.py  initial_load.py
src/: __init__.py  bls_client.py  config.py  data_transformer.py  onet_client.py  pipeline.py  typesense_loader.py
tests/: __init__.py  test_bls_client.py
