[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobtracker"
version = "0.1.0"
description = "BLS Jobs Data API and MCP Tool - Access occupational data, wages, and skills for career planning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ryan Hepler" }
]
keywords = [
    "bls",
    "jobs",
    "occupations",
    "wages",
    "skills",
    "career",
    "education",
    "mcp",
    "api"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "typesense>=0.21.0",
    "pandas>=2.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
jobtracker-api = "api.main:run"
jobtracker-mcp = "mcp_server.server:main"
jobtracker-load = "scripts.initial_load:main"

[project.urls]
Homepage = "https://github.com/rahepler2/JobTracker"
Documentation = "https://github.com/rahepler2/JobTracker#readme"
Repository = "https://github.com/rahepler2/JobTracker"
Issues = "https://github.com/rahepler2/JobTracker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src", "api", "mcp_server"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
